# manticore

./: Cargo.toml
src/: lib.rs  main.rs
src/audio/: mod.rs  pa.rs
src/gui/: mod.rs
src/gui/gtk/: mod.rs
src/util/: ffi.rs
